2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/vnc_view.php: improved the source code style.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* include/constants.php, operation/visual_console/render_view.php:
	fixed the javascript draw lines when there is any error in the map.

2013-06-25  Sancho Lerena <slerena@artica.es>
	
	* extensions/vnc_view.php: Now you can define the display number.

	* operation/agentes/Estado_general_agente.php:: OS version string 
	is fully shown.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* include/constants.php, include/functions_visual_map.php,
	operation/visual_console/render_view.php: fixed when try to access
	to deleted visualmap (for example in dashboard). And added more
	changes and fixed from the trunk for to make more easy the
	code transfusions.

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php: fixed the links of module
	graphs into public visualmap.

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js,
	include/functions_visual_map.php,
	operation/agentes/status_monitor.php: fixed the links to the items
	that represents modules.

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the
	removed the relantionship between items.

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the
	resize map that made lost the icons. In the trunk yet was fixed.

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the
	moving the lines when the item is a graph.

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js,
	include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixed the color of
	lines in the editor.
